--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,10 @@
     "react-flip-toolkit": {
       "react": "^18.2.0",
       "react-dom": "^18.2.0"
-    }
+    },
+    "ajv": "^8.0.0"
+  },
+  "resolutions": {
+    "ajv": "^8.0.0"
   }
 }
